--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -398,8 +398,9 @@
       margin-bottom: 1rem;
       color: #40e0d0;
     }
-
-    /* .invention-icon-img {
+/*
+    If using icons and not images:
+     .invention-icon-img {
       width: 60px;
       height: 60px;
       object-fit: cover;
@@ -417,6 +418,7 @@
 }
 */
 
+/* Invention images */
 .invention-photo {
   width: 80px;
   height: 80px;
